@@ -1,6 +1,9 @@
 Version 1.6+svn:
  * Language and i18n:
    * updated translations: Finnish, Hebrew, Turkish
+ * FormulaAI:
+   * Fixed bug #13230: added debug_float FormulaAI function to allow debugging
+     via floating popups on the specified hex
 
 Version 1.6a:
  * User interface:
